--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
+    - assets/images/weather_image.jpeg
+    - assets/images/1.jpeg
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -75,10 +76,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: appFont
+      fonts:
+        - asset: assets\fonts\Agbalumo-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
